--- a/index.html
+++ b/index.html
@@ -150,8 +150,73 @@
             </div>
         </div>
     </section>
-    <section class="cards">Card</section>
-
+  
+    <section class="project-container"> 
+         <nav class="nav-bar"> 
+             <div class="logo-input"> 
+                 <div class="logo"> 
+                     <span class="material-symbols-outlined menu"> 
+                     menu 
+                     </span> 
+                     <img src="./img/logo.png" alt=""> 
+                     <span>Unfired</span> 
+                 </div> 
+                 <div class="input-icon"> 
+                     <span class="material-symbols-outlined arrow-left"> 
+                     arrow_back_ios 
+                     </span> 
+                     <input type="text" placeholder="Search..."> 
+                     <div class="icon-input-container"> 
+                         <div class="icon-input"> 
+                             <span class="material-symbols-outlined"> 
+                             search 
+                             </span> 
+                         </div> 
+                     </div> 
+                 </div> 
+             </div> 
+             <div class="nav-notification-icons"> 
+                 <div class="notification"> 
+                     <span class="material-symbols-outlined"> 
+                     notifications 
+                     </span> 
+                     <div class="badge"> 
+                         <span>.</span> 
+                     </div> 
+                 </div> 
+  
+                 <div class="notification"> 
+                     <span class="material-symbols-outlined"> 
+                     drafts 
+                     </span> 
+                     <div class="badge"> 
+                         <span>.</span> 
+                     </div> 
+                 </div> 
+  
+                 <div class="notification"> 
+                     <span class="material-symbols-outlined"> 
+                     tune 
+                     </span> 
+                     <div class="badge"> 
+                         <span>.</span> 
+                     </div> 
+                 </div> 
+                  <div class="profile-badge"> 
+                    <img src="./img/pic.jpg" alt="" width="40" height="40"> 
+                     <div class="badge-profile"> 
+                         <span>.</span> 
+                     </div> 
+                 </div> 
+  
+                  <div class="profile"> 
+                         <span class="material-symbols-outlined widgets"> 
+                         widgets 
+                         </span>  
+                 </div> 
+             </div> 
+         </nav> 
+     </section>
     <script src="js/bootstrap.bundle.js"></script>
 </body>
 
