--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" /> 
+     <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon"> 
+     <link rel="stylesheet" href="./nav.css">
 </head>
 
 <body>
