--- a/index.html
+++ b/index.html
@@ -218,7 +218,88 @@
             </div>
         </div>
     </section>
-  <section>User</section>
+  <section>    
+	  <div class="card-container"> 
+         <div class="card"> 
+             <div class="numbers-icon"> 
+               <div class="numbers"> 
+                 <h3>26K</h3> 
+                 <div class="number"> 
+                    <span>(-12.45</span> 
+                     <span class="left-brac">)</span> 
+                     <div class="arror"> 
+                         <div class="icon-arrow"> 
+                             <span class="material-symbols-outlined arrow-down"> 
+                             south 
+                             </span> 
+                         </div> 
+                     </div> 
+                 </div> 
+               </div> 
+               <div class="dot-icon"> 
+                 <span class="material-symbols-outlined dots"> 
+                 more_vert 
+                 </span> 
+               </div> 
+             </div> 
+             <p>Users</p> 
+         </div> 
+  
+         <div class="card"> 
+             <div class="numbers-icon"> 
+               <div class="numbers"> 
+                 <h3>26K</h3> 
+                  <div class="number"> 
+                    <span>(-12.45</span> 
+                     <span class="left-brac">)</span> 
+                     <div class="arror"> 
+                         <div class="icon-arrow"> 
+                             <span class="material-symbols-outlined arrow-down"> 
+                             south 
+                             </span> 
+                         </div> 
+                     </div> 
+                 </div> 
+               </div> 
+               <div class="dot-icon"> 
+                 <span class="material-symbols-outlined dots"> 
+                 more_vert 
+                 </span> 
+               </div> 
+             </div> 
+             <p>Conversion Rate</p> 
+         </div> 
+  
+         <div class="card"> 
+             <div class="numbers-icon"> 
+               <div class="numbers"> 
+                 <h3>26K</h3> 
+                  <div class="number"> 
+                    <span>(-12.45</span> 
+                     <span class="left-brac">)</span> 
+                     <div class="arror"> 
+                         <div class="icon-arrow"> 
+                             <span class="material-symbols-outlined arrow-down"> 
+                             south 
+                             </span> 
+                         </div> 
+                     </div> 
+  
+                 </div> 
+               </div> 
+               <div class="dot-icon"> 
+                 <span class="material-symbols-outlined dots"> 
+                 more_vert 
+                 </span> 
+               </div> 
+             </div> 
+             <p>Session</p> 
+         </div> 
+  
+  
+  
+  
+     </div></section>
 
     <script src="js/bootstrap.bundle.js"></script>
 </body>
