--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CoreUI | Home</title>
 
-    <link rel="stylesheet" href="css/bootstrap.css">
+    
     <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" /> 
      <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon"> 
-     <link rel="stylesheet" href="./nav.css">
 </head>
 
 <body>
     <header class="project-container">
-         <nav class="nav-bar"> 
+         <nav class="nav-bars"> 
              <div class="logo-input"> 
                  <div class="logo"> 
                      <span class="material-symbols-outlined menu"> 
@@ -245,7 +245,7 @@
              <p>Users</p> 
          </div> 
   
-         <div class="card"> 
+         <div class="cards"> 
              <div class="numbers-icon"> 
                <div class="numbers"> 
                  <h3>26K</h3> 
@@ -270,7 +270,7 @@
              <p>Conversion Rate</p> 
          </div> 
   
-         <div class="card"> 
+         <div class="cards"> 
              <div class="numbers-icon"> 
                <div class="numbers"> 
                  <h3>26K</h3> 
